# Real-Time-Scheduling-using-RTIC

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
