[package]
name = "RTS-release"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f446"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"
heapless = "0.7"


[[bin]]
name = "RTS-release"
path = "src/main.rs"
test = false
bench = false


